# arkworks-test

./: Cargo.toml  bls12_377.json  bls12_381.json  bn128_g1.json  bn128_g2.json  bn254_pairing.json  ell.json
src/: main.rs  main_curve.rs
