[package]
name = "arkworks-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
ark-bn254 = { version = "0.4.0", features = ["std"] }
ark-ec = { version = "0.4.2", features = ["std"] }
ark-ff = { version = "0.4.2", features = ["std"] }
ark-bls12-377 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-mnt6-298 = "0.4.0"
ark-mnt4-298 = "0.4.0"
#ark-bn254 = "0.4.0"
#ark-bn254 = { version = "0.4.0", path = "../arkworks-algebra/curves/bn254" }
#ark-ec         = { version = "0.4.2", path = "../arkworks-algebra/ec" }
#ark-ff         = { version = "0.4.2", path = "../arkworks-algebra/ff" }
#ark-ff-asm     = { version = "0.4.2", path = "../arkworks-algebra/ff-asm" }
#ark-ff-macros  = { version = "0.4.2", path = "../arkworks-algebra/ff-macros" }
#ark-ff = "0.4.2"
#ark-ff-macros = "0.4.2"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
